# wasm-svg-process-watcher

./: Cargo.toml
backend/: Cargo.toml
backend/src/: main.rs
frontend/wasm/: Cargo.toml
frontend/wasm/src/: lib.rs
frontend/wasm/static/: index.html
frontend/wasm/static/css/: app.css
shared-types/src/: lib.rs
src/: lib.rs  main.rs
