[package]
name = "server"
version = "0.1.0"
authors = ["inanna malick <inanna@recursion.wtf>"]
edition = "2018"

[dependencies]
bytes = "0.5.3"
futures = "0.3.4"
frontend = { path = "../frontend" }
hyper = "0.13.2"
headers = "0.3.1"
psutil = "3.1.0"
serde = "1.0"
serde_json = "1.0"
shared-types = { path = "../shared-types"}
tokio = { version = "0.2.18", features = ["macros"] }
tonic = "0.1.1"
warp = "0.2.1"
